support wiz 4.10, and insert picture url to md file.

--- a/SaveHistory/config.ini
+++ b/SaveHistory/config.ini
@@ -1,10 +1,10 @@
 [Strings]
 
 ; git/hg库工作目录
-work_dir=D:\Projects\WizDocs\docs
+work_dir=D:\Guodong\code\WizDocs
 
 ; git/hg工具可执行文件所在目录
-tool_path=D:\cygwin_downloads\bin
+tool_path=C:\Program Files\Git\cmd
 
 ; 运行的脚本
 commit_cmd=git_commit.bat
