--- a/SaveHistory/plugin.ini
+++ b/SaveHistory/plugin.ini
@@ -5,6 +5,7 @@ AppGUID={33B302D3-8AD6-49D6-B790-9252AA677AA2}
 AppType=SaveHistory
 AppVersion=1.0
 PluginCount=1
+SupportVersion=2
 [Plugin_0]
 MenuType=NoteShare
 Caption=SaveHistory
