support write long commit message. and make html dialog larger.

--- a/SaveHistory/plugin.ini
+++ b/SaveHistory/plugin.ini
@@ -15,7 +15,10 @@ Caption_1028=保存+
 GUID={15D84319-D68F-4FD9-876C-DF6F2BEE5ABD}
 ScriptFileName=SaveHistory.js
 Type=HtmlDialog
+HtmlDialogTitle=Save history commit
 HtmlDialogFileName=commit.htm
+HtmlDialogWidth=320
+HtmlDialogHeight=320
 [Strings]
 strKM=SaveHistory
 strKM_2052=保存+
